# HumanGuidedAttention

./: README.md  pyproject.toml
human_guided_attention/: model.py  train.py
