[tool.poetry]
name = "human-guided-attention"
version = "0.1.0"
description = "Code for 'Human-Guided Modality Informativeness for Affective States'"
authors = ["Torsten Wörtwein <twoertwein@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "3.11.*"
python-tools = {git = "https://bitbucket.org/twoertwein/python-tools.git", rev = "ddd6ea310f5eecf3c2998c67fe8a11b8c36e6810"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
